Solicitud de pago

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>Titulo de la página</h1>
 <h2>Pal tuto uwu</h2>
-<p> No voy a clonar nada, toy cansao papito. </p>
+<p> No voy a clonar nada... Chale, ya lo clone. Toy cansao papito. </p>
+<h1><ul><li><STRONG>YA PAGUENME</STRONG></li></ul></h1>
