Mensaje de animos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,6 @@
 <h2>Pal tuto uwu</h2>
 <p> No voy a clonar nada... Chale, ya lo clone. Toy cansao papito. </p>
 <h1><ul><li><STRONG>YA PAGUENME</STRONG></li></ul></h1>
+
+<h2>Ya casi somos full stackers :v </h2>
+<progress max="100" [value]="50"></progress>
