Manajando las ramas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,6 @@
 
 <h2>Ya casi somos full stackers :v </h2>
 <progress max="100" [value]="50"></progress>
+
+<h3> Aquí estoy probando si jala esto de las ramas</h3>
+<p> Y ojalá que las cosas salgas más faciles de lo que esperamos</p>
