--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,4 @@
 
 <h2>Ya casi somos full stackers :v </h2>
 <progress max="100" [value]="50"></progress>
+<p><em>Sueltame me lastimas</em> fue la frase más romántica del 2038 antes de la 7ma Guerra extramundial que si involucro a la humanidad en Marte.</p>
