--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,4 @@
 <progress max="100" [value]="50"></progress>
 
 <h3> Aquí estoy probando si jala esto de las ramas</h3>
-<p> Y ojalá que las cosas salgas más faciles de lo que esperamos</p>
+<p> Y ojalá que las cosas salgas más faciles de lo que esperamos... los despiden antes :'v</p>
