Comenzamos con el tutoria, se coloco el titulo y los estilos en CSS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<h1>Titulo de la página</h1>
-<h2>Pal tuto uwu</h2>
-<p> No voy a clonar nada... Chale, ya lo clone. Toy cansao papito. </p>
-<h1><ul><li><STRONG>YA PAGUENME</STRONG></li></ul></h1>
-
-<h2>Ya casi somos full stackers :v </h2>
-<progress max="100" [value]="50"></progress>
-
-<h3> Aquí estoy probando si jala esto de las ramas</h3>
-<p> Y ojalá que las cosas salgas más faciles de lo que esperamos... los despiden antes :'v</p>
+<h1>{{title}}</h1>
