--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<h1>Titulo de la página</h1>
-<h2>Pal tuto uwu</h2>
-<p> No voy a clonar nada... Chale, ya lo clone. Toy cansao papito. </p>
-<h1><ul><li><STRONG>YA PAGUENME</STRONG></li></ul></h1>
-
-<h2>Ya casi somos full stackers :v </h2>
-<progress max="100" [value]="50"></progress>
-<p><em>Sueltame me lastimas</em> fue la frase más romántica del 2038 antes de la 7ma Guerra extramundial que si involucro a la humanidad en Marte.</p>
+<h1>{{title}}</h1>
