--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,1 +1,8 @@
-<h2>{{hero}}</h2>
+<h2>{{hero.name}} details</h2>
+<div>
+  <span>Id: </span> {{hero.id}}
+</div>
+
+<div>
+  <span>Name: </span> {{hero.name}}
+</div>
